feat: improve usage

--- a/notebook/load_raw_data.ipynb
+++ b/notebook/load_raw_data.ipynb
@@ -5,16 +5,7 @@
    "execution_count": 1,
    "id": "60b1e8ec",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Birhanu Matebe\\Downloads\\KAIM\\Project\\Ethiopian-Medical-Bussines\\Ethiopian-Medical-Business-Intelligence\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
@@ -24,79 +15,12 @@
     "\n",
     "\n",
     "# 2. Import your class from the .py file\n",
-    "from src.load_to_postgres import TelegramEnrichmentHandler"
+    "from src.load_to_postgres import TelegramDataLoader"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "32ca6830",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Birhanu Matebe\\Downloads\\KAIM\\Project\\Ethiopian-Medical-Bussines\\Ethiopian-Medical-Business-Intelligence\\.venv\\Scripts\\python.exe\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "print(sys.executable)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "642918f3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading the main weight file...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Birhanu Matebe\\Downloads\\KAIM\\Project\\Ethiopian-Medical-Bussines\\Ethiopian-Medical-Business-Intelligence\\.venv\\Lib\\site-packages\\huggingface_hub\\utils\\_validators.py:186: UserWarning: The `resume_download` argument is deprecated and ignored in `hf_hub_download`. Downloads always resume whenever possible.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'C:\\\\Users\\\\Birhanu Matebe\\\\.cache\\\\huggingface\\\\hub\\\\models--facebook--bart-large-mnli\\\\snapshots\\\\d7645e127eaf1aefc7862fd59a17a5aa8558b8ce\\\\model.safetensors'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from huggingface_hub import hf_hub_download\n",
-    "import os\n",
-    "\n",
-    "# Set your cache path explicitly\n",
-    "cache_path = r\"C:\\Users\\Birhanu Matebe\\.cache\\huggingface\\hub\"\n",
-    "\n",
-    "print(\"Downloading the main weight file...\")\n",
-    "hf_hub_download(\n",
-    "    repo_id=\"facebook/bart-large-mnli\",\n",
-    "    filename=\"model.safetensors\",\n",
-    "    cache_dir=cache_path,\n",
-    "    resume_download=True  # This is the key to stop wasting data\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "5e9db9b0",
    "metadata": {},
    "outputs": [
@@ -104,39 +28,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading HuggingFace models... (Downloads ~2GB on first run)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading weights: 100%|██████████| 515/515 [00:01<00:00, 322.52it/s, Materializing param=model.shared.weight]                                   \n",
-      "No model was supplied, defaulted to distilbert/distilbert-base-uncased-finetuned-sst-2-english and revision 714eb0f.\n",
-      "Using a pipeline without specifying a model name and revision in production is not recommended.\n",
-      "Loading weights: 100%|██████████| 104/104 [00:00<00:00, 522.60it/s, Materializing param=pre_classifier.weight]                                  \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 2076 records in folder ../data/raw/telegram_messages/2026-01-18\n",
-      "\n",
-      "Starting enrichment for 1947 messages...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "AI Processing:   8%|▊         | 158/1947 [16:52<3:47:30,  7.63s/it]"
+      "Loader initialized with engine: medical_warehouse\n",
+      "Successfully read 2076 records.\n",
+      "Successfully loaded 2076 records into raw.telegram_messages\n"
      ]
     }
    ],
    "source": [
     "# 1. Initialize the loader\n",
-    "loader = TelegramEnrichmentHandler()\n",
+    "loader = TelegramDataLoader()\n",
     "\n",
     "# 2. Execute the process\n",
     "loader.run_pipeline(\n",
