refactor: update script usages

--- a/notebook/load_messages_to_postgres.ipynb
+++ b/notebook/load_messages_to_postgres.ipynb
@@ -15,37 +15,36 @@
     "\n",
     "\n",
     "# 2. Import your class from the .py file\n",
-    "from src.load_to_postgres import TelegramDataLoader"
+    "from medical_warehouse.Scripts.load_to_postgres import TelegramDataLoader\n",
+    "import os\n",
+    "from app.core.config import settings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "5e9db9b0",
+   "execution_count": 3,
+   "id": "94f4e5cc",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "🚀 Database 'medical_warehouse' not found. Creating it now...\n",
-      "✅ Loader initialized for database: medical_warehouse\n",
-      "📊 Read 2076 records from local files.\n",
-      "📂 Schema 'raw' verified.\n",
-      "✅ Successfully loaded 2076 records into raw.telegram_messages\n"
+      "2026-02-17 15:41:31,811 - INFO - 💎 Database 'medical_warehouse' exists.\n",
+      "2026-02-17 15:41:31,814 - INFO - Loader initialized for database: medical_warehouse\n",
+      "2026-02-17 15:41:31,982 - INFO - 📊 Read 2950 records from local files.\n",
+      "2026-02-17 15:41:32,070 - INFO - 📂 Schema 'raw' verified.\n",
+      "2026-02-17 15:41:32,327 - INFO - ✅ Loaded 2950 records into raw.telegram_messages\n"
      ]
     }
    ],
    "source": [
-    "# 1. Initialize the loader\n",
+    "# 1. Initialize\n",
     "loader = TelegramDataLoader()\n",
     "\n",
-    "# 2. Execute the process\n",
-    "loader.run_pipeline(\n",
-    "    folder_path=\"../data/raw/telegram_messages/2026-01-18\", \n",
-    "    table_name=\"telegram_messages\", \n",
-    "    schema=\"raw\"\n",
-    ")\n"
+    "# 2. Execute \n",
+    "# The loader automatically pulls paths and table names from config.py\n",
+    "loader.run_pipeline()"
    ]
   }
  ],
