--- a/notebook/telegramScraper.ipynb
+++ b/notebook/telegramScraper.ipynb
@@ -10,41 +10,62 @@
     "import os\n",
     "import sys\n",
     "from dotenv import load_dotenv\n",
+    "import asyncio\n",
     "# Step 1 — Go up one level (from /notebooks/bank_reviews → project_root)\n",
     "project_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
     "sys.path.append(project_root)\n",
-    "\n",
-    "\n",
     "# 2. Import your class from the .py file\n",
-    "from src.scraper import TelegramScraper"
+    "from medical_warehouse.Scripts.scraper import TelegramScraper\n",
+    "from medical_warehouse.Scripts.config import settings\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "85b9c717",
+   "id": "0f51a852",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ CheMed123: Saved to c:\\Users\\Birhanu Matebe\\Downloads\\KAIM\\MedicalData\\Medical-Data-Scraper\\data\\raw\\telegram_messages\\2026-01-18\\CheMed123.json\n",
-      "✅ lobelia4cosmetics: Saved to c:\\Users\\Birhanu Matebe\\Downloads\\KAIM\\MedicalData\\Medical-Data-Scraper\\data\\raw\\telegram_messages\\2026-01-18\\lobelia4cosmetics.json\n",
-      "✅ tikvahpharma: Saved to c:\\Users\\Birhanu Matebe\\Downloads\\KAIM\\MedicalData\\Medical-Data-Scraper\\data\\raw\\telegram_messages\\2026-01-18\\tikvahpharma.json\n"
+      "🚀 Starting scraper for 3 channels...\n",
+      "Signed in successfully as Birhanu; remember to not break the ToS or you will risk an account ban!\n",
+      "✅ CheMed123: Saved 0 messages to c:\\Users\\Birhanu Matebe\\Downloads\\KAIM\\Project\\Ethiopian-Medical-Bussines\\Ethiopian-Medical-Business-Intelligence\\data\\raw/telegram_messages\\2026-02-17\\CheMed123.json\n",
+      "✅ lobelia4cosmetics: Saved 699 messages to c:\\Users\\Birhanu Matebe\\Downloads\\KAIM\\Project\\Ethiopian-Medical-Bussines\\Ethiopian-Medical-Business-Intelligence\\data\\raw/telegram_messages\\2026-02-17\\lobelia4cosmetics.json\n",
+      "✅ tikvahpharma: Saved 175 messages to c:\\Users\\Birhanu Matebe\\Downloads\\KAIM\\Project\\Ethiopian-Medical-Bussines\\Ethiopian-Medical-Business-Intelligence\\data\\raw/telegram_messages\\2026-02-17\\tikvahpharma.json\n",
+      "✅ Scraping task completed.\n"
      ]
     }
    ],
    "source": [
-    "# 3. Load Environment Variables\n",
-    "load_dotenv()\n",
-    "API_ID = os.getenv('API_ID')\n",
-    "API_HASH = os.getenv('API_HASH')\n",
-    "CHANNELS = ['t.me/CheMed123', 't.me/lobelia4cosmetics', 't.me/tikvahpharma']\n",
     "\n",
-    "# 4. Initialize and Run\n",
-    "scraper = TelegramScraper(API_ID, API_HASH)\n",
-    "await scraper.run(CHANNELS) # Using 10 for a quick test"
+    "\n",
+    "# 1. Define your channels\n",
+    "# Note: You can also move this list to your ProjectConstants dataclass \n",
+    "# if these channels are permanent parts of your pipeline.\n",
+    "CHANNELS = ['t.me/CheMed123', 'lobelia4cosmetics', '@tikvahpharma']\n",
+    "\n",
+    "async def main():\n",
+    "    # 2. Initialize the scraper\n",
+    "    # No need to pass API_ID/API_HASH manually; the class \n",
+    "    # now pulls them automatically from 'settings'.\n",
+    "    scraper = TelegramScraper(session_name='medical_business_scraper')\n",
+    "    \n",
+    "    # 3. Run the scraper\n",
+    "    # The 'run' method handles the client connection context automatically\n",
+    "    print(f\"🚀 Starting scraper for {len(CHANNELS)} channels...\")\n",
+    "    await scraper.run(CHANNELS)\n",
+    "    print(\"✅ Scraping task completed.\")\n",
+    "\n",
+    "# 4. Execute (Handling the event loop properly)\n",
+    "if __name__ == \"__main__\":\n",
+    "    # If in a script, use asyncio.run. \n",
+    "    # If in a Notebook, just use: await main()\n",
+    "    try:\n",
+    "        await main()\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Pipeline failed: {e}\")"
    ]
   }
  ],
