--- a/notebook/yolo_detect_and_load_to_postgres.ipynb
+++ b/notebook/yolo_detect_and_load_to_postgres.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "66aa92e7",
    "metadata": {},
    "outputs": [],
@@ -14,25 +14,38 @@
     "project_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
     "sys.path.append(project_root)\n",
     "# In your Notebook cell:\n",
-    "from src.yolo_data_loader import YoloDataHandler\n",
+    "from medical_warehouse.Scripts.yolo_data_loader import YoloDataHandler\n",
     "\n",
-    "# 2. Import your class from the .py file\n",
-    "from src.yolo_detect import YOLOAnalyzer"
+    "from medical_warehouse.Scripts.yolo_detect import YOLOAnalyzer\n",
+    "from medical_warehouse.Scripts.config import settings\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "1aa0ee18",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2026-02-17 15:47:25,835 - INFO - YOLO model yolov8n.pt initialized.\n",
+      "2026-02-17 15:47:25,899 - INFO - 🔍 Starting detection on 2292 images...\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "YOLO model yolov8n.pt initialized.\n",
-      "Starting detection on 1547 images...\n",
-      "Detection results saved to ../data/image_detections.csv\n"
+      "🚀 Scanning images in: c:\\Users\\Birhanu Matebe\\Downloads\\KAIM\\Project\\Ethiopian-Medical-Bussines\\Ethiopian-Medical-Business-Intelligence\\data\\raw/images\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2026-02-17 15:55:47,964 - INFO - ✅ Detection results saved to: c:\\Users\\Birhanu Matebe\\Downloads\\KAIM\\Project\\Ethiopian-Medical-Bussines\\Ethiopian-Medical-Business-Intelligence\\data\\image_detections.csv\n"
      ]
     },
     {
@@ -70,7 +83,7 @@
        "      <td>none</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>other</td>\n",
-       "      <td>../data/raw/images\\CheMed123\\10.jpg</td>\n",
+       "      <td>c:\\Users\\Birhanu Matebe\\Downloads\\KAIM\\Project...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -78,7 +91,7 @@
        "      <td>clock</td>\n",
        "      <td>0.4273</td>\n",
        "      <td>other</td>\n",
-       "      <td>../data/raw/images\\CheMed123\\11.jpg</td>\n",
+       "      <td>c:\\Users\\Birhanu Matebe\\Downloads\\KAIM\\Project...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -86,7 +99,7 @@
        "      <td>hot dog, donut, hot dog, donut, hot dog, hot dog</td>\n",
        "      <td>0.5039</td>\n",
        "      <td>other</td>\n",
-       "      <td>../data/raw/images\\CheMed123\\13.jpg</td>\n",
+       "      <td>c:\\Users\\Birhanu Matebe\\Downloads\\KAIM\\Project...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -94,7 +107,7 @@
        "      <td>none</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>other</td>\n",
-       "      <td>../data/raw/images\\CheMed123\\14.jpg</td>\n",
+       "      <td>c:\\Users\\Birhanu Matebe\\Downloads\\KAIM\\Project...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -102,7 +115,7 @@
        "      <td>none</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>other</td>\n",
-       "      <td>../data/raw/images\\CheMed123\\15.jpg</td>\n",
+       "      <td>c:\\Users\\Birhanu Matebe\\Downloads\\KAIM\\Project...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -116,12 +129,19 @@
        "3          14                                              none   \n",
        "4          15                                              none   \n",
        "\n",
-       "   confidence_score image_category                           image_path  \n",
-       "0            0.0000          other  ../data/raw/images\\CheMed123\\10.jpg  \n",
-       "1            0.4273          other  ../data/raw/images\\CheMed123\\11.jpg  \n",
-       "2            0.5039          other  ../data/raw/images\\CheMed123\\13.jpg  \n",
-       "3            0.0000          other  ../data/raw/images\\CheMed123\\14.jpg  \n",
-       "4            0.0000          other  ../data/raw/images\\CheMed123\\15.jpg  "
+       "   confidence_score image_category  \\\n",
+       "0            0.0000          other   \n",
+       "1            0.4273          other   \n",
+       "2            0.5039          other   \n",
+       "3            0.0000          other   \n",
+       "4            0.0000          other   \n",
+       "\n",
+       "                                          image_path  \n",
+       "0  c:\\Users\\Birhanu Matebe\\Downloads\\KAIM\\Project...  \n",
+       "1  c:\\Users\\Birhanu Matebe\\Downloads\\KAIM\\Project...  \n",
+       "2  c:\\Users\\Birhanu Matebe\\Downloads\\KAIM\\Project...  \n",
+       "3  c:\\Users\\Birhanu Matebe\\Downloads\\KAIM\\Project...  \n",
+       "4  c:\\Users\\Birhanu Matebe\\Downloads\\KAIM\\Project...  "
       ]
      },
      "metadata": {},
@@ -134,33 +154,45 @@
       "\n",
       "--- Image Category Summary ---\n",
       "image_category\n",
-      "other              929\n",
-      "product_display    415\n",
-      "lifestyle          178\n",
-      "promotional         25\n",
+      "other              1293\n",
+      "product_display     756\n",
+      "lifestyle           211\n",
+      "promotional          32\n",
       "Name: count, dtype: int64\n"
      ]
     }
    ],
    "source": [
+    "\n",
     "# 1. Initialize the analyzer\n",
+    "# Model name is pulled from a constant or passed explicitly\n",
     "analyzer = YOLOAnalyzer(model_name='yolov8n.pt')\n",
     "\n",
-    "# 2. Run detection on your image directory\n",
-    "# Make sure this path is correct relative to your notebook location\n",
-    "image_folder = \"../data/raw/images\"\n",
+    "# 2. Run detection using centralized config paths\n",
+    "# This replaces the hardcoded \"../data/raw/images\"\n",
+    "image_folder = os.path.join(\n",
+    "    settings.PROJECT.BASE_DATA_DIR, \n",
+    "    settings.PROJECT.IMAGE_SUBDIR\n",
+    ")\n",
+    "\n",
+    "print(f\"🚀 Scanning images in: {image_folder}\")\n",
     "detections_df = analyzer.detect_objects(image_folder)\n",
     "\n",
     "# 3. Save and Display\n",
     "if detections_df is not None:\n",
-    "    analyzer.save_results(detections_df, \"../data/image_detections.csv\")\n",
+    "    # Use config for the output path as well\n",
+    "    output_path = os.path.join(settings.PROJECT.BASE_DATA_DIR, \"image_detections.csv\")\n",
+    "    analyzer.save_results(detections_df, output_path)\n",
     "    \n",
-    "    # Show the first 5 rows in the notebook\n",
+    "    # Show the first 5 rows\n",
     "    display(detections_df.head())\n",
     "    \n",
-    "    # Quick Summary: How many images fell into each category?\n",
+    "    # Quick Summary using the dynamic dataframe\n",
     "    print(\"\\n--- Image Category Summary ---\")\n",
-    "    print(detections_df['image_category'].value_counts())"
+    "    summary = detections_df['image_category'].value_counts()\n",
+    "    print(summary)\n",
+    "else:\n",
+    "    print(\"❌ No images were processed. Check your path and file extensions.\")"
    ]
   },
   {
